fix(post): fix border clipping between post container and text boxes

--- a/app/assets/stylesheets/posts/_form.css
+++ b/app/assets/stylesheets/posts/_form.css
@@ -32,7 +32,7 @@
 
 .posts__form__message {
   border: none;
-  border-radius: 0 0 5px 5px;
+  border-radius: 5px;
   box-sizing: border-box;
   font: unset;
   grid-area: message;
